fixed some keyboard functionality. changed styling so it wasn't so small on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -33,65 +33,68 @@ body {
 /* LAYOUT
 /*******************************************/
 header {
-     height: 3rem;
-     font-size: 2rem;
-     line-height: 3rem;
+     height: 50px;
+     font-size: 30px;
+     line-height: 50px;
      border-bottom: 1px solid rgb(58, 58, 60);
 }
 
 .container {
-     padding: 1rem 0;
+     padding: 8px 0;
 }
 
 table {
      margin: 0 auto;
 }
 
-.middleOfKeyboard{
-     width: 20rem;
-}
-
+.middleOfKeyboard, 
 .topOfKeyboard,
-.bottomOfKeyboard{
-     width: 22rem;
+.bottomOfKeyboard {
+     width: 384px;
+     display: flex;
+     flex-flow: row wrap;
+     justify-content: center;
 }
 
 .guessTable{
-     width: 16rem;
+     width: 270px;
      border-collapse: separate;
-     border-spacing: .3rem;
+     border-spacing: 4px;
+     display: flex;
+     flex-flow: row wrap;
 }
 .guess{
      border: 1px solid rgb(58, 58, 60);
-     width: 10%;
-     height: 10vw;
-     line-height: 3.2rem;
+     width: 48px;
+     height: 48px;
+     line-height: 48px;
+     font-size: 32px;
 }
 
 button{
-     width: 1rem;
-     height: 1rem;
+     width: 16px;
+     height: 16px;
      background-color: rgb(130, 130, 130);
      border: none;
      border-radius: 5px;
-     margin: 10%;
+     margin: 3px;
      font-weight: 900;
      color: white;
-     font-size: .5rem;
+     font-size: 12px;
 }
 
 form, input {
-     width: 1rem;
+     width: 16px;
      border-radius: 0;
      border: 0 solid rgb(58, 58, 60);
 }
 
 .keyboard, .wideKeyBoard{
-     width: 2rem;
-     height: 2.5rem;
+     width: 33px;
+     height: 58px;
 }
 .wider{
-     width: 3rem;
+     width: 50.4px;
 }
 
 /******************************************
